--- a/pw50_jet_calculator.html
+++ b/pw50_jet_calculator.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PW50 Jet Calculator — MasterTune Moto Suite</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Pw50 Jet Calculator — MasterTune Moto Suite</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
+<style>
     button {
         background-color: #1ce3e0 !important;
         color: #0f1113 !important;
@@ -21,7 +22,7 @@
         background-color: #18ccc0 !important;
     }
   </style>
-  <style>
+<style>
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
@@ -72,22 +73,21 @@
   </style>
 </head>
 <body>
-  <header>
-    <div class="left">
-      <img src="../logo.png" alt="MasterTune Logo" />
-      <h1>MasterTune Moto Suite</h1>
-    </div>
-    <div>
-      <select class="bike-selector">
-        <option>PW50</option>
-        <option disabled>Cobra (coming soon)</option>
-        <option disabled>CRF50 (coming soon)</option>
-        <option disabled>KTM Mini (coming soon)</option>
-      </select>
-    </div>
-  </header>
-  <div class="tool-container">
-    
+<header>
+<div class="left">
+<img alt="MasterTune Logo" src="../logo.png"/>
+<h1>Pw50 Jet Calculator</h1>
+</div>
+<div>
+<select class="bike-selector">
+<option>PW50</option>
+<option disabled="">Cobra (coming soon)</option>
+<option disabled="">CRF50 (coming soon)</option>
+<option disabled="">KTM Mini (coming soon)</option>
+</select>
+</div>
+</header>
+<div class="tool-container">
 <!DOCTYPE html>
 
 <html lang="en">
@@ -152,7 +152,6 @@
     Turn ON Factory51 Jetting Mode to unlock precision values like <code>#68.25</code> — available only from Factory51.
   </div>
 <label for="altitude">Current Altitude (ft)</label>
-
 <div class="tip" style="margin-bottom: 1.5rem;">
 <strong>🏁 Factory51 Jetting Mode (Optional)</strong><br/>
   Most PW50s only use common main jet sizes: <code>#65</code>, <code>#67.5</code>, <code>#70</code>, <code>#72.5</code>.  
@@ -285,9 +284,8 @@ input:checked + .slider:before {
   </script>
 </body>
 </html>
-
-  </div>
-  <footer>
+</div>
+<footer>
     Brought to you by Factory51 · MasterTune Moto Suite © 2025
   </footer>
 </body>
