--- a/pw50_teardown_tracker_.html
+++ b/pw50_teardown_tracker_.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PW50 Teardown Tracker — MasterTune Moto Suite</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Pw50 Teardown Tracker — MasterTune Moto Suite</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
+<style>
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
@@ -73,30 +74,29 @@
   </style>
 </head>
 <body>
-  <header>
-    <div class="left">
-      <img src="../logo.png" alt="MasterTune Logo" />
-      <h1>MasterTune Moto Suite</h1>
-    </div>
-    <div>
-      <select class="bike-selector">
-        <option>PW50</option>
-        <option disabled>Cobra (coming soon)</option>
-        <option disabled>CRF50 (coming soon)</option>
-        <option disabled>KTM Mini (coming soon)</option>
-      </select>
-    </div>
-  </header>
-
-  <div class="tool-container">
-    
+<header>
+<div class="left">
+<img alt="MasterTune Logo" src="../logo.png"/>
+<h1>Pw50 Teardown Tracker</h1>
+</div>
+<div>
+<select class="bike-selector">
+<option>PW50</option>
+<option disabled="">Cobra (coming soon)</option>
+<option disabled="">CRF50 (coming soon)</option>
+<option disabled="">KTM Mini (coming soon)</option>
+</select>
+</div>
+</header>
+<div class="tool-container">
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PW50 Teardown Tracker — Factory51 MasterTune</title>
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>PW50 Teardown Tracker — Factory51 MasterTune</title>
+<style>
     body {
       background-color: #0B0B0B;
       color: #FAFAFA;
@@ -159,14 +159,11 @@
   </style>
 </head>
 <body>
-  <h1>🧰 PW50 Teardown Tracker</h1>
-  <p>Follow the full Factory51 teardown process from CH4–CH6. All progress is saved in your browser. Add notes and export your findings at the end.</p>
-
-  <div id="tracker"></div>
-
-  <button onclick="exportAll()">📋 Export My Tracker Notes</button>
-
-  <script>
+<h1>🧰 PW50 Teardown Tracker</h1>
+<p>Follow the full Factory51 teardown process from CH4–CH6. All progress is saved in your browser. Add notes and export your findings at the end.</p>
+<div id="tracker"></div>
+<button onclick="exportAll()">📋 Export My Tracker Notes</button>
+<script>
     const data = {
       '🧼 Initial Prep & Fluids': [
         'Wash and degrease the bike',
@@ -274,10 +271,8 @@
   </script>
 </body>
 </html>
-
-  </div>
-
-  <footer>
+</div>
+<footer>
     Brought to you by Factory51 · MasterTune Moto Suite © 2025
   </footer>
 </body>
