--- a/PW50_vin_decoder.html
+++ b/PW50_vin_decoder.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PW50 VIN Decoder — MasterTune Moto Suite</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-  
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Pw50 Vin Decoder — MasterTune Moto Suite</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
 <style>
     button {
         background-color: #1ce3e0 !important;
@@ -22,8 +22,7 @@
         background-color: #18ccc0 !important;
     }
 </style>
-
-  <style>
+<style>
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
@@ -74,28 +73,29 @@
   </style>
 </head>
 <body>
-  <header>
-    <div class="left">
-      <img src="../logo.png" alt="MasterTune Logo" />
-      <h1>MasterTune Moto Suite</h1>
-    </div>
-    <div>
-      <select class="bike-selector">
-        <option>PW50</option>
-        <option disabled>Cobra (coming soon)</option>
-        <option disabled>CRF50 (coming soon)</option>
-        <option disabled>KTM Mini (coming soon)</option>
-      </select>
-    </div>
-  </header>
-  <div class="tool-container">
-    <!DOCTYPE html>
+<header>
+<div class="left">
+<img alt="MasterTune Logo" src="../logo.png"/>
+<h1>Pw50 Vin Decoder</h1>
+</div>
+<div>
+<select class="bike-selector">
+<option>PW50</option>
+<option disabled="">Cobra (coming soon)</option>
+<option disabled="">CRF50 (coming soon)</option>
+<option disabled="">KTM Mini (coming soon)</option>
+</select>
+</div>
+</header>
+<div class="tool-container">
+<!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>VIN Decoder - MasterTune</title>
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>VIN Decoder - MasterTune</title>
+<style>
     body {
       background-color: #0B0B0B;
       font-family: 'Inter', sans-serif;
@@ -164,29 +164,24 @@
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>🔍 VIN Decoder</h1>
-    <p class="description">Enter the 10th digit of your PW50 VIN to find your model year and details.</p>
-
-    <div class="input-block">
-      <input type="text" id="vinDigit" placeholder="Enter 10th digit (e.g. N)" maxlength="1" />
-      <button onclick="decodeVIN()">DECODE</button>
-    </div>
-
-    <div class="results" id="resultBox" style="display:none">
-      <div class="result-item" id="yearResult"></div>
-      <div class="result-item" id="notesResult"></div>
-    </div>
-
-    <div class="tip">💡 TIP: The VIN is stamped on the frame, usually near the front steering tube.</div>
-
-    <div class="actions">
-      <button onclick="window.print()">🖨️ Print</button>
-      <button onclick="saveData()">💾 Save to Device</button>
-    </div>
-  </div>
-
-  <script>
+<div class="container">
+<h1>🔍 VIN Decoder</h1>
+<p class="description">Enter the 10th digit of your PW50 VIN to find your model year and details.</p>
+<div class="input-block">
+<input id="vinDigit" maxlength="1" placeholder="Enter 10th digit (e.g. N)" type="text"/>
+<button onclick="decodeVIN()">DECODE</button>
+</div>
+<div class="results" id="resultBox" style="display:none">
+<div class="result-item" id="yearResult"></div>
+<div class="result-item" id="notesResult"></div>
+</div>
+<div class="tip">💡 TIP: The VIN is stamped on the frame, usually near the front steering tube.</div>
+<div class="actions">
+<button onclick="window.print()">🖨️ Print</button>
+<button onclick="saveData()">💾 Save to Device</button>
+</div>
+</div>
+<script>
     const vinMap = {
       A: { year: 1980 }, B: { year: 1981 }, C: { year: 1982 }, D: { year: 1983 },
       E: { year: 1984 }, F: { year: 1985 }, G: { year: 1986 }, H: { year: 1987 },
@@ -226,9 +221,8 @@
   </script>
 </body>
 </html>
-
-  </div>
-  <footer>
+</div>
+<footer>
     Brought to you by Factory51 · MasterTune Moto Suite © 2025
   </footer>
 </body>
