--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MasterTune Moto Suite</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Index — MasterTune Moto Suite</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
+<style>
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
@@ -80,22 +81,22 @@
   </style>
 </head>
 <body>
-  <header>
-    <div class="left">
-      <img src="logo.png" alt="MasterTune Logo">
-      <h1>MasterTune Moto Suite</h1>
-    </div>
-    <div>
-      <select class="bike-selector">
-        <option>PW50</option>
-        <option disabled>Cobra (coming soon)</option>
-        <option disabled>CRF50 (coming soon)</option>
-        <option disabled>KTM Mini (coming soon)</option>
-      </select>
-    </div>
-  </header>
-  <div class="container">
+<header>
+<div class="left">
+<img alt="MasterTune Logo" src="logo.png"/>
+<h1>Index</h1>
+</div>
+<div>
+<select class="bike-selector">
+<option>PW50</option>
+<option disabled="">Cobra (coming soon)</option>
+<option disabled="">CRF50 (coming soon)</option>
+<option disabled="">KTM Mini (coming soon)</option>
+</select>
+</div>
+</header>
+<div class="container">
 <div class="category"><h2>Calculators</h2><div class="grid"><a class="tool-box" href="Calculators/Fuel%20Mix%20ratio%20calculator.html"><span>Fuel Mix Ratio Calculator</span></a><a class="tool-box" href="Calculators/PW50%20CDI%20Timing%20Tool.html"><span>Pw50 Cdi Timing Tool</span></a><a class="tool-box" href="Calculators/PW50%20compression_checker_tool.html"><span>Pw50 Compression Checker Tool</span></a><a class="tool-box" href="Calculators/PW50%20port_timing_visualizer.html"><span>Pw50 Port Timing Visualizer</span></a><a class="tool-box" href="Calculators/PW50%20vin_decoder.html"><span>Pw50 Vin Decoder</span></a><a class="tool-box" href="Calculators/pw50_jet%20calculator.html"><span>Pw50 Jet Calculator</span></a><a class="tool-box" href="Calculators/pw50_oil_pump%20Setup_tool_.html"><span>Pw50 Oil Pump Setup Tool </span></a><a class="tool-box" href="Calculators/pw50_ring_gap_calculator_.html"><span>Pw50 Ring Gap Calculator </span></a><a class="tool-box" href="Calculators/pw_50_gear%20ratio%20calculator.html"><span>Pw 50 Gear Ratio Calculator</span></a></div></div><div class="category"><h2>Checklist Tools</h2><div class="grid"><a class="tool-box" href="Checklist%20Tools/pw50%20build_reality_check.html"><span>Pw50 Build Reality Check</span></a><a class="tool-box" href="Checklist%20Tools/pw50%20pre_race_checklist.html"><span>Pw50 Pre Race Checklist</span></a><a class="tool-box" href="Checklist%20Tools/pw50%20race_day_flow_checklist.html"><span>Pw50 Race Day Flow Checklist</span></a><a class="tool-box" href="Checklist%20Tools/pw50%20tool_scout_with_checkboxes%20(1).html"><span>Pw50 Tool Scout With Checkboxes (1)</span></a><a class="tool-box" href="Checklist%20Tools/pw50_between_motos_checklist_tool_orange_title.html"><span>Pw50 Between Motos Checklist Tool Orange Title</span></a><a class="tool-box" href="Checklist%20Tools/pw50_routine_maintenance_tool_with_final_exports.html"><span>Pw50 Routine Maintenance Tool With Final Exports</span></a></div></div><div class="category"><h2>Trackers</h2><div class="grid"><a class="tool-box" href="Trackers/pw50%20break_in_tracker_tool.html"><span>Pw50 Break In Tracker Tool</span></a><a class="tool-box" href="Trackers/pw50%20engine_rebuild_torque_tool.html"><span>Pw50 Engine Rebuild Torque Tool</span></a><a class="tool-box" href="Trackers/pw50%20rider_coaching_tools.html"><span>Pw50 Rider Coaching Tools</span></a><a class="tool-box" href="Trackers/pw50_51_point_inspection_checkered_flag.html"><span>Pw50 51 Point Inspection Checkered Flag</span></a><a class="tool-box" href="Trackers/pw50_teardown_tracker_expanded.html"><span>Pw50 Teardown Tracker Expanded</span></a></div></div>
-  </div>
+</div>
 </body>
 </html>
