--- a/pw50_race_day_flow_checklist.html
+++ b/pw50_race_day_flow_checklist.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Pw50 Tool Scout Final Wrapped — MasterTune Moto Suite</title>
+<title>Pw50 Race Day Flow Checklist — MasterTune Moto Suite</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
 <style>
     body {
@@ -85,7 +85,7 @@
 <header>
 <div class="left" style="display: flex; align-items: center;">
 <img alt="MasterTune Logo" src="../logo.png"/>
-<h1>Pw50 Tool Scout Final Wrapped</h1>
+<h1>Pw50 Race Day Flow Checklist</h1>
 </div>
 <div>
 <select class="bike-selector">
