finally fixed links hopefully

--- a/pw50_51_point_inspection_sheet.html
+++ b/pw50_51_point_inspection_sheet.html
@@ -141,7 +141,7 @@
     </style>
 </head>
 <body>
-<h1>🏁 Factory51 PW50 51-Point Inspection Sheet</h1>
+<h1>Pw50 51 Point Inspection Sheet</h1>
 <table>
 <thead>
 <tr>
