--- a/pw50_bearing_selector_upgrade_guide.html
+++ b/pw50_bearing_selector_upgrade_guide.html
@@ -140,7 +140,7 @@
   </style>
 </head>
 <body>
-<h1>🏁 PW50 Bearing Selector &amp; Upgrade Guide</h1>
+<h1>Pw50 Bearing Selector Upgrade Guide</h1>
 <p>Choose the section of the bike to view bearing information.</p>
 <select id="sectionSelector" onchange="showSection()">
 <option value="">-- Select Section --</option>
