--- a/pw50_blueprint_log.html
+++ b/pw50_blueprint_log.html
@@ -143,7 +143,7 @@
   </style>
 </head>
 <body>
-<h1>📘 PW50 Blueprint Log</h1>
+<h1>Pw50 Blueprint Log</h1>
 <div class="tip">
     Record your precision engine specs here. Rear-to-front order. PW50-specific. Tuned by Factory51.
   </div>
