--- a/piston_clearance_and_ring_gap_calculator.html
+++ b/piston_clearance_and_ring_gap_calculator.html
@@ -153,7 +153,7 @@
   </style>
 </head>
 <body>
-<h1>🧪 Piston Clearance &amp; Ring Gap Calculator</h1>
+<h1>Piston Clearance And Ring Gap Calculator</h1>
 <div class="tip">
     Enter your piston diameter to calculate your ideal <strong>ring end gap</strong> using Gordon Jennings’ tuning rule: 0.004" per inch of piston diameter. Applies to cast rings on a steel bore.
   </div>
