--- a/pw50_port_timing_visualizer.html
+++ b/pw50_port_timing_visualizer.html
@@ -147,7 +147,7 @@
   </style>
 </head>
 <body>
-<h1>📊 PW50 Port Timing Visualizer</h1>
+<h1>Pw50 Port Timing Visualizer</h1>
 <label for="ex">Exhaust Duration (degrees)</label>
 <input id="ex" placeholder="e.g. 175" step="1" type="number"/>
 <label for="trans">Transfer Duration (degrees)</label>
