--- a/pw50_reality_check.html
+++ b/pw50_reality_check.html
@@ -86,7 +86,7 @@
 </div>
 </header>
 <div class="tool-container">
-<h1>🧪 Build Reality Check</h1>
+<h1>Pw50 Reality Check</h1>
 <p>Think you're ready for a full PW50 race build? Take this quick quiz and find out.</p>
 <div class="question">
 <label for="tools">Do you have the right tools (torque wrench, bearing press, piston stop)?</label>
