--- a/index.html
+++ b/index.html
@@ -4,6 +4,53 @@
   <meta charset="UTF-8">
   <title>MasterTune Moto Suite</title>
   <link rel="stylesheet" href="style.css">
+
+<style>
+  body {
+    font-family: 'Segoe UI', sans-serif;
+    background-color: #f9fbfc;
+    margin: 0;
+    padding: 0;
+    color: #222;
+  }
+  header {
+    background-color: #1a1a1a;
+    color: #fff;
+    padding: 1rem;
+    text-align: center;
+  }
+  h1 {
+    margin: 0;
+    font-size: 1.8rem;
+  }
+  .tool-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 1rem;
+    padding: 2rem;
+  }
+  .tool-box {
+    background-color: #ffffff;
+    border-radius: 12px;
+    padding: 1.5rem;
+    text-align: center;
+    text-decoration: none;
+    color: #222;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    transition: transform 0.2s ease;
+    border: 1px solid #e0e0e0;
+  }
+  .tool-box:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 4px 14px rgba(0,0,0,0.15);
+  }
+  .tool-box span {
+    font-size: 1.1rem;
+    display: inline-block;
+    margin-top: 0.25rem;
+  }
+</style>
+
 </head>
 <body>
   <header><h1>MasterTune Moto Suite</h1></header>
