--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
       gap: 1.25rem;
     }
     .tool-box {
+      display: block;
       background-color: #161b22;
       border: 1px solid #30363d;
       padding: 1.25rem;
@@ -66,15 +67,15 @@
       box-shadow: 0 2px 4px rgba(0,0,0,0.3);
       text-align: center;
       transition: 0.3s;
-    }
-    .tool-box:hover {
-      border-color: #1ce3e0;
-    }
-    .tool-box a {
       color: #1ce3e0;
       text-decoration: none;
       font-weight: 600;
       font-size: 1rem;
+      user-select: none;
+    }
+    .tool-box:hover {
+      border-color: #1ce3e0;
+      background-color: #1a1f28;
     }
   </style>
 </head>
@@ -94,38 +95,38 @@
 <div class="category">
 <h2>Calculators & Visualizers</h2>
 <div class="grid">
-  <div class="tool-box"><a href="piston_clearance_and_ring_gap_calculator.html">Piston Clearance & Ring Gap Calculator</a></div>
-  <div class="tool-box"><a href="pw50_cdi_timing_calculator.html">CDI Timing Tool</a></div>
-  <div class="tool-box"><a href="pw50_compression_analyzer.html">Compression Checker</a></div>
-  <div class="tool-box"><a href="pw50_fuel_mix_calculator.html">Fuel Mix Ratio Calculator</a></div>
-  <div class="tool-box"><a href="pw50_gear_ratio_calculator.html">Gear Ratio Calculator</a></div>
-  <div class="tool-box"><a href="pw50_jet_calculator.html">Jetting Calculator</a></div>
-  <div class="tool-box"><a href="pw50_port_timing_visualizer.html">Port Timing Visualizer</a></div>
+  <a class="tool-box" href="piston_clearance_and_ring_gap_calculator.html">Piston Clearance & Ring Gap Calculator</a>
+  <a class="tool-box" href="pw50_cdi_timing_calculator.html">CDI Timing Tool</a>
+  <a class="tool-box" href="pw50_compression_analyzer.html">Compression Checker</a>
+  <a class="tool-box" href="pw50_fuel_mix_calculator.html">Fuel Mix Ratio Calculator</a>
+  <a class="tool-box" href="pw50_gear_ratio_calculator.html">Gear Ratio Calculator</a>
+  <a class="tool-box" href="pw50_jet_calculator.html">Jetting Calculator</a>
+  <a class="tool-box" href="pw50_port_timing_visualizer.html">Port Timing Visualizer</a>
 </div>
 </div>
 <div class="category">
 <h2>Maintenance & Prep Tools</h2>
 <div class="grid">
-  <div class="tool-box"><a href="pw50_between_motos_checklist.html">Between Motos Checklist</a></div>
-  <div class="tool-box"><a href="pw50_break_in_tracker.html">Break-In Tracker</a></div>
-  <div class="tool-box"><a href="pw50_oil_pump_setup_tool.html">Oil Pump Setup Tool</a></div>
-  <div class="tool-box"><a href="pw50_pre_race_checklist.html">Pre-Race Checklist</a></div>
-  <div class="tool-box"><a href="pw50_race_day_flow_checklist.html">Race-Day Flow Checklist</a></div>
-  <div class="tool-box"><a href="pw50_routine_maintenance_tool.html">Routine Maintenance Tracker</a></div>
-  <div class="tool-box"><a href="pw50_teardown_tracker_.html">Teardown Tracker</a></div>
-  <div class="tool-box"><a href="pw50_tool_scout.html">Tool Scout Checklist</a></div>
-  <div class="tool-box"><a href="pw50_torque_tool.html">Torque Spec Tool</a></div>
+  <a class="tool-box" href="pw50_between_motos_checklist.html">Between Motos Checklist</a>
+  <a class="tool-box" href="pw50_break_in_tracker.html">Break-In Tracker</a>
+  <a class="tool-box" href="pw50_oil_pump_setup_tool.html">Oil Pump Setup Tool</a>
+  <a class="tool-box" href="pw50_pre_race_checklist.html">Pre-Race Checklist</a>
+  <a class="tool-box" href="pw50_race_day_flow_checklist.html">Race-Day Flow Checklist</a>
+  <a class="tool-box" href="pw50_routine_maintenance_tool.html">Routine Maintenance Tracker</a>
+  <a class="tool-box" href="pw50_teardown_tracker_.html">Teardown Tracker</a>
+  <a class="tool-box" href="pw50_tool_scout.html">Tool Scout Checklist</a>
+  <a class="tool-box" href="pw50_torque_tool.html">Torque Spec Tool</a>
 </div>
 </div>
 <div class="category">
 <h2>Diagnostics & Setup Logs</h2>
 <div class="grid">
-  <div class="tool-box"><a href="pw50_51_point_inspection_sheet.html">51-Point Inspection Sheet</a></div>
-  <div class="tool-box"><a href="pw50_bearing_selector_upgrade_guide.html">Bearing Selector & Upgrade Guide</a></div>
-  <div class="tool-box"><a href="pw50_blueprint_log.html">Blueprint Log</a></div>
-  <div class="tool-box"><a href="pw50_coaching_tracker.html">Rider Coaching Tracker</a></div>
-  <div class="tool-box"><a href="pw50_reality_check.html">Build Reality Check</a></div>
-  <div class="tool-box"><a href="pw50_vin_decoder.html">VIN Decoder</a></div>
+  <a class="tool-box" href="pw50_51_point_inspection_sheet.html">51-Point Inspection Sheet</a>
+  <a class="tool-box" href="pw50_bearing_selector_upgrade_guide.html">Bearing Selector & Upgrade Guide</a>
+  <a class="tool-box" href="pw50_blueprint_log.html">Blueprint Log</a>
+  <a class="tool-box" href="pw50_coaching_tracker.html">Rider Coaching Tracker</a>
+  <a class="tool-box" href="pw50_reality_check.html">Build Reality Check</a>
+  <a class="tool-box" href="pw50_vin_decoder.html">VIN Decoder</a>
 </div>
 </div>
 
