--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Index — MasterTune Moto Suite</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet"/>
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Index — MasterTune Moto Suite</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
+<style>
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
@@ -80,56 +81,55 @@
   </style>
 </head>
 <body>
-  <header>
-    <div class="left">
-      <img src="logo.png" alt="Logo"/>
-      <h1>MasterTune Moto Suite</h1>
-    </div>
-    <select class="bike-selector">
-      <option>PW50</option>
-      <option disabled>CRF50 (coming soon)</option>
-      <option disabled>Cobra (coming soon)</option>
-    </select>
-  </header>
-  <div class="container">
-<div class="category">
-<h2>Calculators & Visualizers</h2>
-<div class="grid">
-  <a class="tool-box" href="piston_clearance_and_ring_gap_calculator.html">Piston Clearance & Ring Gap Calculator</a>
-  <a class="tool-box" href="pw50_cdi_timing_calculator.html">CDI Timing Tool</a>
-  <a class="tool-box" href="pw50_compression_analyzer.html">Compression Checker</a>
-  <a class="tool-box" href="pw50_fuel_mix_calculator.html">Fuel Mix Ratio Calculator</a>
-  <a class="tool-box" href="pw50_gear_ratio_calculator.html">Gear Ratio Calculator</a>
-  <a class="tool-box" href="pw50_jet_calculator.html">Jetting Calculator</a>
-  <a class="tool-box" href="pw50_port_timing_visualizer.html">Port Timing Visualizer</a>
+<header>
+<div class="left">
+<img alt="MasterTune Moto Suite Logo" src="images/mastertune-logo.png"/>
+<h1>MasterTune Moto Suite</h1>
 </div>
-</div>
+<select class="bike-selector">
+<option>PW50</option>
+<option disabled="">CRF50 (coming soon)</option>
+<option disabled="">Cobra (coming soon)</option>
+</select>
+</header>
+<div class="container">
 <div class="category">
-<h2>Maintenance & Prep Tools</h2>
+<h2>Calculators &amp; Visualizers</h2>
 <div class="grid">
-  <a class="tool-box" href="pw50_between_motos_checklist.html">Between Motos Checklist</a>
-  <a class="tool-box" href="pw50_break_in_tracker.html">Break-In Tracker</a>
-  <a class="tool-box" href="pw50_oil_pump_setup_tool.html">Oil Pump Setup Tool</a>
-  <a class="tool-box" href="pw50_pre_race_checklist.html">Pre-Race Checklist</a>
-  <a class="tool-box" href="pw50_race_day_flow_checklist.html">Race-Day Flow Checklist</a>
-  <a class="tool-box" href="pw50_routine_maintenance_tool.html">Routine Maintenance Tracker</a>
-  <a class="tool-box" href="pw50_teardown_tracker_.html">Teardown Tracker</a>
-  <a class="tool-box" href="pw50_tool_scout.html">Tool Scout Checklist</a>
-  <a class="tool-box" href="pw50_torque_tool.html">Torque Spec Tool</a>
+<a class="tool-box" href="piston_clearance_and_ring_gap_calculator.html">Piston Clearance &amp; Ring Gap Calculator</a>
+<a class="tool-box" href="pw50_cdi_timing_calculator.html">CDI Timing Tool</a>
+<a class="tool-box" href="pw50_compression_analyzer.html">Compression Checker</a>
+<a class="tool-box" href="pw50_fuel_mix_calculator.html">Fuel Mix Ratio Calculator</a>
+<a class="tool-box" href="pw50_gear_ratio_calculator.html">Gear Ratio Calculator</a>
+<a class="tool-box" href="pw50_jet_calculator.html">Jetting Calculator</a>
+<a class="tool-box" href="pw50_port_timing_visualizer.html">Port Timing Visualizer</a>
 </div>
 </div>
 <div class="category">
-<h2>Diagnostics & Setup Logs</h2>
+<h2>Maintenance &amp; Prep Tools</h2>
 <div class="grid">
-  <a class="tool-box" href="pw50_51_point_inspection_sheet.html">51-Point Inspection Sheet</a>
-  <a class="tool-box" href="pw50_bearing_selector_upgrade_guide.html">Bearing Selector & Upgrade Guide</a>
-  <a class="tool-box" href="pw50_blueprint_log.html">Blueprint Log</a>
-  <a class="tool-box" href="pw50_coaching_tracker.html">Rider Coaching Tracker</a>
-  <a class="tool-box" href="pw50_reality_check.html">Build Reality Check</a>
-  <a class="tool-box" href="pw50_vin_decoder.html">VIN Decoder</a>
+<a class="tool-box" href="pw50_between_motos_checklist.html">Between Motos Checklist</a>
+<a class="tool-box" href="pw50_break_in_tracker.html">Break-In Tracker</a>
+<a class="tool-box" href="pw50_oil_pump_setup_tool.html">Oil Pump Setup Tool</a>
+<a class="tool-box" href="pw50_pre_race_checklist.html">Pre-Race Checklist</a>
+<a class="tool-box" href="pw50_race_day_flow_checklist.html">Race-Day Flow Checklist</a>
+<a class="tool-box" href="pw50_routine_maintenance_tool.html">Routine Maintenance Tracker</a>
+<a class="tool-box" href="pw50_teardown_tracker_.html">Teardown Tracker</a>
+<a class="tool-box" href="pw50_tool_scout.html">Tool Scout Checklist</a>
+<a class="tool-box" href="pw50_torque_tool.html">Torque Spec Tool</a>
 </div>
 </div>
-
-  </div>
+<div class="category">
+<h2>Diagnostics &amp; Setup Logs</h2>
+<div class="grid">
+<a class="tool-box" href="pw50_51_point_inspection_sheet.html">51-Point Inspection Sheet</a>
+<a class="tool-box" href="pw50_bearing_selector_upgrade_guide.html">Bearing Selector &amp; Upgrade Guide</a>
+<a class="tool-box" href="pw50_blueprint_log.html">Blueprint Log</a>
+<a class="tool-box" href="pw50_coaching_tracker.html">Rider Coaching Tracker</a>
+<a class="tool-box" href="pw50_reality_check.html">Build Reality Check</a>
+<a class="tool-box" href="pw50_vin_decoder.html">VIN Decoder</a>
+</div>
+</div>
+</div>
 </body>
 </html>
