reaedy to delete all

--- a/PW50_vin_decoder.html
+++ b/PW50_vin_decoder.html
@@ -165,7 +165,7 @@
 </head>
 <body>
 <div class="container">
-<h1>🔍 VIN Decoder</h1>
+<h1>Pw50 Vin Decoder</h1>
 <p class="description">Enter the 10th digit of your PW50 VIN to find your model year and details.</p>
 <div class="input-block">
 <input id="vinDigit" maxlength="1" placeholder="Enter 10th digit (e.g. N)" type="text"/>
