--- a/pw50_fuel_mix_Calculator.html
+++ b/pw50_fuel_mix_Calculator.html
@@ -148,7 +148,7 @@
 </head>
 <body>
 <div class="container">
-<h1>PW50 Fuel Mix Calculator</h1>
+<h1>Pw50 Fuel Mix Calculator</h1>
 <label for="fuelType">Fuel Type</label>
 <select id="fuelType">
 <option>Pump Gas</option>
