--- a/PW50 CDI Timing Calculator.html
+++ b/PW50 CDI Timing Calculator.html
@@ -76,7 +76,7 @@
 <body>
 <header>
 <div class="left">
-<img alt="MasterTune Logo" src="../logo.png"/>
+<img alt="MasterTune Logo" src="/images/mastertune-logo.png"/>
 <h1>Pw50 Cdi Timing Calculator</h1>
 </div>
 <div>
