--- a/piston_clearance_and_ring_gap_calculator.html
+++ b/piston_clearance_and_ring_gap_calculator.html
@@ -86,7 +86,7 @@
 <body>
 <header>
 <div class="left">
-<img alt="MasterTune Logo" src="../logo.png"/>
+<img alt="MasterTune Logo" src="https://robbymcbride.github.io/mastertune-main/images/mastertune-logo.png"/>
 <h1>Piston Clearance And Ring Gap Calculator</h1>
 </div>
 <div>
