--- a/PW50_routine_maintenance_tool.html
+++ b/PW50_routine_maintenance_tool.html
@@ -97,7 +97,7 @@
 <body>
 <header>
 <div class="left" style="display: flex; align-items: center;">
-<img alt="MasterTune Logo" src="https://robbymcbride.github.io/mastertune-main/images/mastertune-logo.png"/>
+<img alt="MasterTune Logo" src="../logo.png"/>
 <h1>Pw50 Routine Maintenance Tool</h1>
 </div>
 <div>
