--- a/pw50_break_in_tracker.html
+++ b/pw50_break_in_tracker.html
@@ -76,7 +76,7 @@
 <body>
 <header>
 <div class="left">
-<img alt="MasterTune Logo" src="https://robbymcbride.github.io/mastertune-main/images/mastertune-logo.png"/>
+<img alt="MasterTune Logo" src="../logo.png"/>
 <h1>Pw50 Break In Tracker</h1>
 </div>
 <div>
@@ -147,7 +147,7 @@
   </style>
 </head>
 <body>
-<h1>Pw50 Break In Tracker</h1>
+<h1>⏱️ PW50 Break-In Tracker</h1>
 <p><strong>🔥 Factory51 Break-In Protocol</strong><br/>
   Track your PW50 engine break-in process like a pro. This tool logs your sessions, throttle use, and notes while calculating total time — aiming for 2.0+ hours across multiple heat cycles.</p>
 <div class="result">
