--- a/pw50_gear_ratio_calculator.html
+++ b/pw50_gear_ratio_calculator.html
@@ -76,7 +76,7 @@
 <body>
 <header>
 <div class="left">
-<img alt="MasterTune Logo" src="https://robbymcbride.github.io/mastertune-main/images/mastertune-logo.png"/>
+<img alt="MasterTune Logo" src="../logo.png"/>
 <h1>Pw50 Gear Ratio Calculator</h1>
 </div>
 <div>
@@ -131,7 +131,7 @@
       border-left: 4px solid #30e1d3;
     }
   </style>
-<h1>Pw50 Gear Ratio Calculator</h1>
+<h1>🏁 PW50 Gear Ratio Calculator</h1>
 <p>
     This tool shows engine RPM at a <strong>simulated 50 MPH</strong> to help preview whether you’re spinning the motor too fast. It’s not your actual speed — just a reference point to spot risky setups.
   </p>
