--- a/pw50_jet_calculator.html
+++ b/pw50_jet_calculator.html
@@ -75,7 +75,7 @@
 <body>
 <header>
 <div class="left">
-<img alt="MasterTune Logo" src="https://robbymcbride.github.io/mastertune-main/images/mastertune-logo.png"/>
+<img alt="MasterTune Logo" src="../logo.png"/>
 <h1>Pw50 Jet Calculator</h1>
 </div>
 <div>
@@ -145,7 +145,7 @@
   </style>
 </head>
 <body>
-<h1>Pw50 Jet Calculator</h1>
+<h1>🧪 PW50 Jetting Calculator</h1>
 <div class="tip">
 <strong>🏁 Factory51 Jetting Mode (Optional)</strong><br/>
     Most PW50s only use standard jets: <code>#65</code>, <code>#67.5</code>, <code>#70</code>, <code>#72.5</code>.  
