--- a/pw50_race_day_flow_checklist.html
+++ b/pw50_race_day_flow_checklist.html
@@ -84,7 +84,7 @@
 <body>
 <header>
 <div class="left" style="display: flex; align-items: center;">
-<img alt="MasterTune Logo" src="https://robbymcbride.github.io/mastertune-main/images/mastertune-logo.png"/>
+<img alt="MasterTune Logo" src="../logo.png"/>
 <h1>Pw50 Race Day Flow Checklist</h1>
 </div>
 <div>
@@ -96,7 +96,7 @@
 </div>
 </header>
 <div class="tool-container">
-<h1>Pw50 Race Day Flow Checklist</h1>
+<h1>🏁 Race-Day Flow Checklist</h1>
 <p>Follow this system before every moto. Calm rider. Prepped bike. Focused pit.</p>
 <h2>🧰 Bike Prep</h2>
 <label><input type="checkbox"/> Fuel topped and on correct mix?</label>
