--- a/PW 50 between_motos_checklist.html
+++ b/PW 50 between_motos_checklist.html
@@ -100,7 +100,7 @@
 <body>
 <header>
 <div class="left" style="display: flex; align-items: center;">
-<img alt="MasterTune Logo" src="https://robbymcbride.github.io/mastertune-main/images/mastertune-logo.png"/>
+<img alt="MasterTune Logo" src="../logo.png"/>
 <h1>Pw 50 Between Motos Checklist</h1>
 </div>
 <div>
