--- a/PW50_vin_decoder.html
+++ b/PW50_vin_decoder.html
@@ -75,7 +75,7 @@
 <body>
 <header>
 <div class="left">
-<img alt="MasterTune Logo" src="https://robbymcbride.github.io/mastertune-main/images/mastertune-logo.png"/>
+<img alt="MasterTune Logo" src="../logo.png"/>
 <h1>Pw50 Vin Decoder</h1>
 </div>
 <div>
