--- a/pw50_51_point_inspection_sheet.html
+++ b/pw50_51_point_inspection_sheet.html
@@ -76,7 +76,7 @@
 <body>
 <header>
 <div class="left">
-<img alt="MasterTune Logo" src="https://robbymcbride.github.io/mastertune-main/images/mastertune-logo.png"/>
+<img alt="MasterTune Logo" src="../logo.png"/>
 <h1>Pw50 51 Point Inspection Sheet</h1>
 </div>
 <div>
@@ -141,7 +141,7 @@
     </style>
 </head>
 <body>
-<h1>Pw50 51 Point Inspection Sheet</h1>
+<h1>🏁 Factory51 PW50 51-Point Inspection Sheet</h1>
 <table>
 <thead>
 <tr>
