--- a/pw50_blueprint_log.html
+++ b/pw50_blueprint_log.html
@@ -76,7 +76,7 @@
 <body>
 <header>
 <div class="left">
-<img alt="MasterTune Logo" src="https://robbymcbride.github.io/mastertune-main/images/mastertune-logo.png"/>
+<img alt="MasterTune Logo" src="../logo.png"/>
 <h1>Pw50 Blueprint Log</h1>
 </div>
 <div>
@@ -143,7 +143,7 @@
   </style>
 </head>
 <body>
-<h1>Pw50 Blueprint Log</h1>
+<h1>📘 PW50 Blueprint Log</h1>
 <div class="tip">
     Record your precision engine specs here. Rear-to-front order. PW50-specific. Tuned by Factory51.
   </div>
