--- a/pw50_coaching_tracker.html
+++ b/pw50_coaching_tracker.html
@@ -92,7 +92,7 @@
 <body>
 <header>
 <div class="left" style="display: flex; align-items: center;">
-<img alt="MasterTune Logo" src="https://robbymcbride.github.io/mastertune-main/images/mastertune-logo.png"/>
+<img alt="MasterTune Logo" src="../logo.png"/>
 <h1>Pw50 Coaching Tracker</h1>
 </div>
 <div>
@@ -106,7 +106,7 @@
 <div class="tool-container">
 <!-- START OF TOOL CONTENT -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<h2>Pw50 Coaching Tracker</h2><p>Use this coaching tool during practice or race day to log lap times, record visual/riding cues, and monitor rider performance. Saved data is stored in your browser and can be exported or visualized anytime.</p>
+<h2>PW50 Coaching Tracker</h2><p>Use this coaching tool during practice or race day to log lap times, record visual/riding cues, and monitor rider performance. Saved data is stored in your browser and can be exported or visualized anytime.</p>
 <ul>
 <li><strong>Lap Time Logger:</strong> Enter a time and notes each lap. It auto-saves, graphs laps, and tracks progress.</li>
 <li><strong>Copy All Lap Data:</strong> Copies your full lap log to clipboard for sharing or posting.</li>
