--- a/pw50_compression_analyzer.html
+++ b/pw50_compression_analyzer.html
@@ -76,7 +76,7 @@
 <body>
 <header>
 <div class="left">
-<img alt="MasterTune Logo" src="https://robbymcbride.github.io/mastertune-main/images/mastertune-logo.png"/>
+<img alt="MasterTune Logo" src="../logo.png"/>
 <h1>Pw50 Compression Analyzer</h1>
 </div>
 <div>
@@ -144,7 +144,7 @@
   </style>
 </head>
 <body>
-<h1>Pw50 Compression Analyzer</h1>
+<h1>🔍 PW50 Compression Analyzer</h1>
 <div class="tip">
     Enter your kick test compression reading (PSI) to get a quick status report. Make sure the throttle is wide open and the gauge is sealed properly.
   </div>
