--- a/pw50_fuel_mix_Calculator.html
+++ b/pw50_fuel_mix_Calculator.html
@@ -62,7 +62,7 @@
 <body>
 <header>
 <div class="left">
-<img alt="MasterTune Logo" src="https://robbymcbride.github.io/mastertune-main/images/mastertune-logo.png"/>
+<img alt="MasterTune Logo" src="../logo.png"/>
 <h1>Pw50 Fuel Mix Calculator</h1>
 </div>
 <div>
