--- a/pw50_port_timing_visualizer.html
+++ b/pw50_port_timing_visualizer.html
@@ -76,7 +76,7 @@
 <body>
 <header>
 <div class="left">
-<img alt="MasterTune Logo" src="https://robbymcbride.github.io/mastertune-main/images/mastertune-logo.png"/>
+<img alt="MasterTune Logo" src="../logo.png"/>
 <h1>Pw50 Port Timing Visualizer</h1>
 </div>
 <div>
@@ -147,7 +147,7 @@
   </style>
 </head>
 <body>
-<h1>Pw50 Port Timing Visualizer</h1>
+<h1>📊 PW50 Port Timing Visualizer</h1>
 <label for="ex">Exhaust Duration (degrees)</label>
 <input id="ex" placeholder="e.g. 175" step="1" type="number"/>
 <label for="trans">Transfer Duration (degrees)</label>
