--- a/pw50_pre_race_checklist.html
+++ b/pw50_pre_race_checklist.html
@@ -76,7 +76,7 @@
 <body>
 <header>
 <div class="left">
-<img alt="MasterTune Logo" src="https://robbymcbride.github.io/mastertune-main/images/mastertune-logo.png"/>
+<img alt="MasterTune Logo" src="../logo.png"/>
 <h1>Pw50 Pre Race Checklist</h1>
 </div>
 <div>
@@ -88,7 +88,7 @@
 </div>
 </header>
 <div class="tool-container">
-<h1>Pw50 Pre Race Checklist</h1>
+<h1>✅ Pre-Race Final Setup Checklist</h1>
 <div class="tip">
     It’s not the time to be chasing bolts, second-guessing jetting, or peeling stickers off plastics. The difference between a pro-level pit and a garage-sale panic station? Prep. This checklist covers the final 24 hours before the gate drops — what to check, what to log, and what to repeat every time.
   </div>
