--- a/pw50_teardown_tracker_.html
+++ b/pw50_teardown_tracker_.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Pw50 Teardown Tracker  — MasterTune Moto Suite</title>
+<title>Pw50 Teardown Tracker — MasterTune Moto Suite</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
 <style>
     body {
@@ -76,8 +76,8 @@
 <body>
 <header>
 <div class="left">
-<img alt="MasterTune Logo" src="https://robbymcbride.github.io/mastertune-main/images/mastertune-logo.png"/>
-<h1>Pw50 Teardown Tracker </h1>
+<img alt="MasterTune Logo" src="../logo.png"/>
+<h1>Pw50 Teardown Tracker</h1>
 </div>
 <div>
 <select class="bike-selector">
@@ -159,7 +159,7 @@
   </style>
 </head>
 <body>
-<h1>Pw50 Teardown Tracker </h1>
+<h1>🧰 PW50 Teardown Tracker</h1>
 <p>Follow the full Factory51 teardown process from CH4–CH6. All progress is saved in your browser. Add notes and export your findings at the end.</p>
 <div id="tracker"></div>
 <button onclick="exportAll()">📋 Export My Tracker Notes</button>
