--- a/pw50_tool_scout_FINAL_WRAPPED.html
+++ b/pw50_tool_scout_FINAL_WRAPPED.html
@@ -84,7 +84,7 @@
 <body>
 <header>
 <div class="left" style="display: flex; align-items: center;">
-<img alt="MasterTune Logo" src="https://robbymcbride.github.io/mastertune-main/images/mastertune-logo.png"/>
+<img alt="MasterTune Logo" src="../logo.png"/>
 <h1>Pw50 Tool Scout Final Wrapped</h1>
 </div>
 <div>
