--- a/pw50_torque_tool.html
+++ b/pw50_torque_tool.html
@@ -76,7 +76,7 @@
 <body>
 <header>
 <div class="left">
-<img alt="MasterTune Logo" src="https://robbymcbride.github.io/mastertune-main/images/mastertune-logo.png"/>
+<img alt="MasterTune Logo" src="../logo.png"/>
 <h1>Pw50 Torque Tool</h1>
 </div>
 <div>
